--- a/locales/it/LC_MESSAGES/volto.po
+++ b/locales/it/LC_MESSAGES/volto.po
@@ -1,17 +1,15 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Plone\n"
-"POT-Creation-Date: 2024-08-14T08:44:56.646Z\n"
-"Last-Translator: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
-"Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"MIME-Version: 1.0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
-"Preferred-Encodings: utf-8\n"
-"Domain: volto\n"
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language: \n"
+"Language-Team: \n"
+"Content-Type: \n"
+"Content-Transfer-Encoding: \n"
+"Plural-Forms: \n"
 
 #. Default: "Attenzione!"
 #: components/Search/Search
@@ -21,7 +19,7 @@ msgstr ""
 #. Default: "Date"
 #: components/Search/Facets/widgets/DatetimeWidget
 msgid "Date"
-msgstr ""
+msgstr "Data"
 
 #. Default: "Nessun risultato soddisfa la tua ricerca"
 #: components/Search/Search
@@ -46,7 +44,7 @@ msgstr ""
 #. Default: "Time"
 #: components/Search/Facets/widgets/DatetimeWidget
 msgid "Time"
-msgstr ""
+msgstr "Ora"
 
 #. Default: "Aggiungi un indice"
 #: components/manage/Widgets/AvailableIndexesWidget/AvailableIndexesWidget
